# LLMOps

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.py
function_calling/: function_calling.py  main.py
mcp_test/: mcp_client.py
multi_tool_agent/: agent.py
openai_agent_sdk/: agent.py  mcp_server.py
