[project]
name = "LLMOps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "mcp>=1.13.1",
    "openai>=1.102.0",
    "yfinance>=0.2.65",
    "pydantic-settings>=2.5.2",
    "openai-agents>=0.2.9",
    "pydantic-ai>=0.8.0",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C"]
ignore = ["D"]
